wp-content/themes/lingonberry/style.css
/* ... */
.post-meta {
	padding-top: 1em;
	text-transform: uppercase;
	letter-spacing: 1px;
	font-size: 0.825em;
	color: #999;
}

.post-meta a { color: #999; }

.post-meta .date-sep { margin: 0 5px; color: #DDD; }

/* post-cat-tags */

.post-cat-tags {
	margin-top: 2em;
	color: #888;
	font-size: 0.925em;
	padding-bottom: 4.5%;
	border-bottom: 3px double #EEE;
}

.post-cat-tags p { display: inline-block; line-height: 120%; }

.post-cat-tags .post-categories { margin-right: 20px; }

.post-cat-tags .post-tags { margin-top: 0.5em; }

/* post-navigation */

.post-nav {
	padding: 0 5.5% 4% 5.5%;
/*	background: #2D3642;*/
}

.post-nav a {
	padding: 15px 20px;
	margin: 1.5% 0;
	background: #333;
	border-radius: 3px;
	color: #FFF;
	float: left;
	line-height: 1;
}

.post-nav .post-nav-newer { float: right; }

.post-nav a:hover {
	background: #FF706C;
	color: #FFF;
}


/* -------------------------------------------------------------------------------- */
/*	7. Post content
/* -------------------------------------------------------------------------------- */


.post-content { font-size: 1.075em; }

.post-content a:hover { text-decoration: underline; }

.post-content p,
.post-content blockquote,
.post-content ul,
.post-content ol,
.post-content address,
.post-content dl,
.post-content .wp-caption,
.post-content pre {
	line-height: 170%;
	margin-bottom: 1.1em;
}

.post-content > *:first-child { margin-top: 0; }
.post-content *:last-child { margin-bottom: 0; }

.post-content h1, .post-content h2, .post-content h3, .post-content h4, .post-content h5, .post-content h6 {
	/*margin: 50px 0 20px;*/
	color: #444;
}

.post-content h1 { font-size: 2em; }

.post-content h2 { font-size: 1.75em; }

.post-content h3 { font-size: 1.5em; }

.post-content h4 { font-size: 1.25em; }

.post-content h5 { font-size: 1.1em; }

.post-content h6 {
	font-size: 0.925em;
	font-weight: bold;
	text-transform: uppercase;
}

.post-content h1+h1, .post-content h1+h2, .post-content h1+h3, .post-content h1+h4, .post-content h1+h5, .post-content h1+h6,
.post-content h2+h1, .post-content h2+h2, .post-content h2+h3, .post-content h2+h4, .post-content h2+h5, .post-content h2+h6,
.post-content h3+h1, .post-content h3+h2, .post-content h3+h3, .post-content h3+h4, .post-content h3+h5, .post-content h3+h6,
.post-content h4+h1, .post-content h4+h2, .post-content h4+h3, .post-content h4+h4, .post-content h4+h5, .post-content h4+h6,
.post-content h5+h1, .post-content h5+h2, .post-content h5+h3, .post-content h5+h4, .post-content h5+h5, .post-content h5+h6,
.post-content h6+h1, .post-content h6+h2, .post-content h6+h3, .post-content h6+h4, .post-content h6+h5, .post-content h6+h6 {
	margin-top: 30px;
}

.post-content blockquote {
	font-size: 1.1em;
	font-family: 'Raleway', 'Helvetica Neue', sans-serif;
	padding: 1em;
	background: #f6f6f6;
	color: #666;
	display: block;
	clear: both;
}

.post-content cite {
	font-family: 'Raleway', 'Helvetica Neue', sans-serif;
	font-weight: 600;
	text-transform: uppercase;
	line-height: 140%;
	color: #666;
}

.post-content cite:before { content: "— "; }

.post-content blockquote cite {
	display: block;
	margin-top: 1em;
	font-size: 0.8em;
}

.post-content blockquote cite em { font-style: italic; font-weight: bold; }

em, q {  font-style: italic;  }

.post-content strong em,
.post-content em strong {
	font-weight: bold;
	font-style: italic;
}

.post-content big { font-size: 1.25em; }

abbr, acronym { cursor: help; }

code, kbd, pre {
	font-size: 0.85em;
	background: #EEE;
	font-family: Menlo, Monaco, monospace;
}

.post-content .highlight {
	background: #fcf8a5;
	width: auto;
	display: inline;
	padding: 2px 3px;
}

.post-content kbd,
.post-content code {
	padding: 5px;
	border-radius: 3px;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
}

.post-content dl { line-height: 160%; }

.post-content dl dt { font-weight: bold; }

.post-content hr {
	width: 50%;
	height: 5px;
	background: #EEE;
	margin: 2em auto;
	border: 0;
}

.post-content ul {
	list-style: disc;
	margin-left: 1.5em;
}

.post-content ul ul { list-style: circle; }
.post-content ul ul ul { list-style: square; }

.post-content ol {
	list-style: decimal;
	margin-left: 1.5em;
}

.post-content ol ol { list-style: lower-alpha; }
.post-content ol ol ol {
	list-style: lower-roman;
}

.post-content ul ul,
.post-content ul ol,
.post-content ol ul,
.post-content ol ol {
	margin-bottom: 0;
}

.post-content li {
	margin-bottom: 0.5em;
	line-height: 170%;
}

.post-content ol ol li:first-child,
.post-content ol ul li:first-child,
.post-content ul ul li:first-child,
.post-content ul ol li:first-child {
	margin-top: 0.5em;
}

.post-content ol > li:last-child,
.post-content ul > li:last-child {
	margin-bottom: 0;
}

.post-content address {
	padding: 3% 3.5%;
	background: #F1F1F1;
}

.post-content pre {
	white-space: pre-wrap;       /* css-3 */
	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
	white-space: -pre-wrap;      /* Opera 4-6 */
	white-space: -o-pre-wrap;    /* Opera 7 */
	word-wrap: break-word;       /* Internet Explorer 5.5+ */
	line-height: 140%;
	padding: 2% 2.5%;
	background: #f1f1f1;
}


/* Post media --------------------------------------- */


.post-content .wp-caption { margin-bottom: 1.5em; }

img.alignleft,
.alignleft img,
img.aligncenter,
.aligncenter img,
img.alignright,
.alignright img,
img.alignnone,
.alignnone img {
	display: block;
	box-sizing: border-box;
	padding: 5px;
	border: 1px solid #EEE;
}


.post-content .alignleft,
.post-content .alignright {
	margin-bottom: 1em;
	max-width: 45%;
}

.post-content .wp-caption .alignleft,
.post-content .wp-caption .alignright {
	margin-bottom: 0;
}

.post-content .alignleft {
	float: left;
	margin-right: 1em;
}

.post-content .alignright {
	float: right;
	margin-left: 1em;
}

.post-content .aligncenter {
	display: block;
	margin-left: auto;
	margin-right: auto;
}
/* ... */

